network_policy/networkpolicy-certain-ip.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-specific-ip
spec:
  podSelector:
    matchLabels:
      app: app1
  ingress:
  - from:
    - ipBlock:
        cidr: 172.18.0.1/32
