network_policy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app1-access
spec:
  podSelector:
    matchLabels:
      app: app2
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app1
  egress: []
